src/test/resources/private/typechecking/fail/main_structure/fail08_mainAsMember.jova
class Main {
}

class Helper {
}

class Test {
    public int a;
    public string b;
    private bool c;
    private Main d;
    private Helper e;
}